URL DE ENVIROMENT VERSIÓN FINAL DE RANDY

--- a/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
+++ b/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
@@ -1,5 +1,5 @@
 <div class="card animated fadeIn fast" >
-  <img class="card-img-top img-fluid" [src]="getSantizeUrl(servicio.img)" [alt]="servicio.nombre">
+  <img class="card-img-top img-fluid" [src]="getSantizeUrl()" [alt]="servicio.nombre">
   <div class="card-body">
     <h4 class="card-title">{{ servicio.nombre }}</h4>
     <p class="card-text">{{servicio.tipo}}</p>
